--- a/food_Delivery_App/src/components/CartItems/cartItems.css
+++ b/food_Delivery_App/src/components/CartItems/cartItems.css
@@ -6,6 +6,8 @@
     align-items: center;
     flex-direction: column;
     gap: 1rem;
+    align-items: center;
+        
 }
 .cartItems{
     position: relative;
@@ -15,6 +17,7 @@
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     /* border: 1px solid black; */
     border-radius: 8px;
+    align-items: center;
 }
 .cartItems img{
     width: 200px;
