--- a/food_Delivery_App/src/components/SingleProduct/single.css
+++ b/food_Delivery_App/src/components/SingleProduct/single.css
@@ -7,7 +7,7 @@
 .imgContainer{
     display: flex;
     flex-direction: row;
-    margin-left: 300px;
+    /* margin-left: 300px; */
     /* margin-top: 2rem; */
 }
 .sideImages{
