--- a/food_Delivery_App/src/components/CartItems/cartItems.css
+++ b/food_Delivery_App/src/components/CartItems/cartItems.css
@@ -1,12 +1,14 @@
 .cartWrapper{
     margin-top: 2rem;
-    width: 100%;
+    margin-left: 3rem;
+    /* width: 100%; */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     gap: 1rem;
 }
+
 .cartItems{
     position: relative;
     width: 1100px;
